[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu_back.jpg" type="Texture" id=2]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/main/SceneTransitionRect.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -47.0
margin_right = 65.0
margin_bottom = 47.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 130.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 130.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="SceneTransitionRect" parent="." instance=ExtResource( 4 )]
mouse_filter = 2

[connection signal="button_down" from="VBoxContainer/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
